<resources>
    <string name="app_name">About Me</string>
    <string name="name">Reham Ahmed</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="bio">
        Hello My name is Reham,

        \n \n
        If you wanna run away with me, I know a galaxy
And I can take you for a ride
I had a premonition that we fell into a rhythm
Where the music dont stop for life
Glitter in the sky, glitter in my eyes
Shining just the way I like
           \n \n
If you are feeling like you need a little bit of company
You met me at the perfect time
\n \n
You want me, I want you, baby
My sugarboo, Im levitating
The Milky Way, were renegading
Yeah, yeah, yeah, yeah, yeah

        \n \n
        I got you, moonlight, you are my starlight
I need you all night, come on, dance with me
Im levitating
You, moonlight, you are my starlight (You are the moonlight)
I need you all night, come on, dance with me
Im levitating
    </string>
    <string name="what_is_your_nickname">What is your nickname?</string>
    <string name="done">Done</string>

</resources>